compiler/tests/fail/register_allocation/arm-m4/inplace.jazz
// Since the xor instruction is “in-place“,
// the value of b is no longer available after it
export fn xor(reg u32 a b) -> reg u32 {
  #[keep, inplace] a = b ^ a;
  return b;
}
